# graphRAG

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TASKS.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-reviewer.md
.claude/agents/checklists/: concurrency.md  contracts.md  db.md  fe.md  guards.md  lifecycle.md
.claude/hooks/: require-codex-approval.ps1  require-codex-approval.sh  require-push-gates.sh  write-browser-qa-receipt.sh  write-review-receipt.sh
.claude/memory/: MEMORY.md  codex-plus-one-merge-gate.md  graphrag-architecture.md  graphrag-ba-real-llm.md  graphrag-ba2-registry-fk.md  graphrag-ba2e-prep.md  graphrag-ba3-prep.md  graphrag-ba6b-prep.md  graphrag-ci-before-codex.md  graphrag-dr002-cleaning-round.md  graphrag-fe-browser-qa.md  graphrag-fe1-pr70-codex-quota.md  graphrag-goal-museum-guide.md  graphrag-gov-fe-design.md  graphrag-lesson-classes.md  graphrag-loop-paused-pr5.md  graphrag-memory-pruning-directive.md  graphrag-open-followups.md  graphrag-pr-titles-english.md  graphrag-rb1-retry-skip-design.md  graphrag-sample-data-hakeguan.md  graphrag-track5-owner-approvals.md  graphrag-tutorial-before-hakeguan.md  graphrag-ux-redesign.md  graphrag-v2-frontend-scope.md  graphrag-working-style.md
.github/workflows/: ci.yml
api/: __init__.py  app.py  auth.py  deps.py  envelope.py  errors.py  idempotency.py  pagination.py  registry_errors.py  schemas.py
api/routers/: __init__.py  _query.py  builds.py  clean.py  health.py  inspect.py  jobs.py  projects.py  query.py  review.py  sources.py  triggers.py  uploads.py
api/workers/: __init__.py  build_worker.py
cli/: __init__.py  main.py
contracts/: golden.schema.json  mcp_response.schema.json  openapi.yaml  query_policy.schema.json
core/: __init__.py  config.py  paths.py
core/builds/: __init__.py  config.py  creation.py  lease.py  lifecycle.py  orchestrator.py  retry.py  sources.py  stages.py
core/clean/: chunking.py
core/eval/: __init__.py  golden.py  idempotency.py  inputs.py  runner.py  scoring.py  spec.py
core/graph/: documents.py  ontology.py  proposals.py  state.py  structured.py
core/index/: indexing.py
core/ingest/: connectors.py  documents.py
core/llm/: factory.py
core/mcp/: __init__.py  addressing.py  context.py  gateway.py  policy.py  server.py
core/metadata/: __init__.py  schema.py
core/observability/: __init__.py  health.py  reads.py  recorder.py  spec.py
core/query/: __init__.py  global_reports.py  graph.py  hybrid.py  linking.py  metadata_enrich.py  policy.py  results.py  semantic.py  sql.py  sql_guard.py
core/registry/: __init__.py  jobs.py  store.py
core/resolve/: __init__.py  decisions.py  fingerprints.py  resolution.py  review.py
core/stores/: __init__.py  errors.py  graph.py  repo.py  sqlreader.py  tables.py  vectors.py
core/summarize/: __init__.py  communities.py
docs/: DESIGN.md  LOOP.md  TASKS_ARCHIVE.md
migrations/: env.py
migrations/versions/: 0001_builds.py  0002_review_ledger.py  0003_observability.py  0004_core_tables.py  0005_item_identifiers_nonempty.py  0006_ontology_proposals.py  0007_projects_sources.py  0008_idempotency_keys.py  0009_jobs.py  0010_builds_project_fk.py  0011_jobs_lease.py  0012_jobs_config_snapshot.py  0013_jobs_reaper_index.py  0014_jobs_error_frozen_shape.py  0015_jobs_eval_inputs_fp.py  0016_entities_disambiguator.py  0017_sources_enabled.py  0018_pipeline_runs_by_build.py  0019_builds_parent_build_id.py  0020_documents_metadata_gin.py
projects/demo/: config.yaml  mcp_entrypoint.py
projects/museum/eval/: golden.yaml
projects/nmmst/eval/: golden.yaml
scripts/: archive_task.py  governance-check.sh  memory-stale-claims.sh  probe-codex.sh  stamp_gates_receipt.py  watch-codex.sh
tests/: conftest.py  test_api_skeleton.py  test_archive_task.py  test_build_scoped_repo.py  test_build_scoped_repo_integration.py  test_build_worker_component.py  test_build_worker_integration.py  test_builds_api_integration.py  test_builds_config.py  test_builds_creation_integration.py  test_builds_lease_component.py  test_builds_lease_integration.py  test_builds_lifecycle.py  test_builds_migration_integration.py  test_builds_orchestrator_integration.py  test_builds_pipeline_component.py  test_builds_pipeline_real_llm.py  test_builds_retry_clone_integration.py  test_builds_retry_graph_clone_integration.py  test_builds_routers.py  test_builds_schema.py  test_builds_sources.py  test_builds_stages_component.py  test_builds_stages_integration.py  test_chunking.py  test_chunking_block_validity_parity.py  test_clean_api_integration.py  test_clean_routers.py  test_cli.py  test_config.py  test_console_schema.py  test_contracts.py  test_core_tables_migration_integration.py  test_core_tables_schema.py  test_ddl_universal.py  test_eval_contract.py  test_eval_endpoint.py  test_eval_golden.py  test_eval_idempotency.py  test_eval_runner_integration.py  (+93 more)
tests/fixtures/: canonical_file_uri.json  chunking_block_validity.json  ontology_block_validity.json  query_policy_validity.json
web/: .prettierignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/e2e/: console.spec.ts
web/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts  test-utils.tsx  viteConfig.test.ts
web/src/api/: chunkingValidityParity.test.ts  cleanPreview.typetest.ts  client.ts  jobStream.test.ts  jobStream.ts  ontologyValidityParity.test.ts  policyValidityParity.test.ts  queries.test.ts  queries.ts  queryPolicyTemplate.test.ts  schema.ts  useDecideReviewTarget.test.tsx  useDecisionLock.test.tsx
web/src/components/: AppShell.css  AppShell.tsx  CandidatesTable.test.tsx  CandidatesTable.tsx  EntityReview.test.tsx  EntityReview.tsx  GovernanceBacklog.test.tsx  GovernanceBacklog.tsx  JobProgress.tsx  JobWatcher.test.tsx  JobWatcher.tsx  NewProjectForm.css  NewProjectForm.test.tsx  NewProjectForm.tsx  ProjectSwitcher.tsx  ProposalPool.test.tsx  ProposalPool.tsx  PublishGate.test.tsx  PublishGate.tsx  QueryResults.test.tsx  (+10 more)
(+41 files in other folders)
