[project]
name = "graphrag"
version = "0.0.0"
description = "Multi-project hybrid RAG platform (graph + vector + SQL) exposed via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "neo4j>=5.20",
    "qdrant-client>=1.12",
    "llama-index-core>=0.14.23",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-embeddings-openai>=0.5.1",
    "sqlglot>=25.0",
    "leidenalg>=0.12.0",
    "python-igraph>=1.0.0",
    "mcp>=1.28.1",
    # runtime loaders: golden.py + mcp/policy.py validate frozen contracts and
    # parse YAML configs on the serving/eval paths — a wheel install without
    # dev extras must not ModuleNotFoundError (Codex PR#39 round 9)
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[project.scripts]
graphrag = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "cli"]

[tool.hatch.build.targets.wheel.force-include]
# the frozen contracts ship inside the wheel (core/mcp/policy.py validates
# query policies against them at runtime; a packaged install has no repo root)
"contracts" = "core/contracts"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "poethepoet>=0.27",
    "pre-commit>=3.8",
    "jsonschema>=4.20",
    "types-jsonschema>=4.20",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
    "openapi-spec-validator>=0.7.1",
    "hypothesis>=6.100",
]

# ---- tooling -------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["web", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
files = ["core", "api", "cli", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs docker compose services (postgres/neo4j/qdrant/redis)",
    "contract: validates API/MCP payloads against frozen schemas in contracts/",
    "eval: retrieval-quality golden-set eval (slow; needs a built index)",
    "e2e: end-to-end via a running app (frontend uses Playwright)",
    "slow: long-running",
]

# ---- task runner (poe) ---------------------------------------------------
[tool.poe.tasks]
fmt = { cmd = "ruff format .", help = "Auto-format code" }
fmt-check = { cmd = "ruff format --check .", help = "Check formatting (no writes)" }
lint = { cmd = "ruff check .", help = "Lint" }
lint-fix = { cmd = "ruff check --fix .", help = "Lint and autofix" }
typecheck = { cmd = "mypy", help = "Static type check" }
test = { cmd = "pytest -m 'not integration and not eval and not e2e and not slow'", help = "Fast tests (unit + contract)" }
test-int = { cmd = "pytest -m integration", help = "Integration tests (needs: docker compose up -d)" }
test-contract = { cmd = "pytest -m contract", help = "Contract tests (validate frozen schemas)" }
test-eval = { cmd = "pytest -m eval", help = "Retrieval-quality eval (needs a built index)" }
test-all = { cmd = "pytest -m ''", help = "Every test, all markers" }
test-cov = { cmd = "pytest -m 'not integration and not eval and not e2e and not slow' --cov=core --cov=api --cov=cli --cov-report=term-missing --cov-fail-under=85", help = "Fast tests with coverage gate" }
migrate = { cmd = "alembic upgrade head", help = "Apply Postgres migrations (needs: docker compose up -d --wait)" }

[tool.poe.tasks.check]
help = "Backend quality gates: fmt-check, lint, typecheck, test"
sequence = [
    { ref = "fmt-check" },
    { ref = "lint" },
    { ref = "typecheck" },
    { ref = "test" },
]

[tool.poe.tasks.web-check]
shell = "npm run check"
cwd = "web"
interpreter = ["pwsh", "powershell", "bash", "sh"]
help = "Frontend quality gates (runs in web/)"

[tool.poe.tasks.check-all]
help = "Fast gate: backend + frontend (the loop's per-iteration definition of done)"
sequence = [{ ref = "check" }, { ref = "web-check" }]

[tool.poe.tasks.check-full]
help = "Full gate: check-all + integration tests (needs: docker compose up -d)"
sequence = [{ ref = "check-all" }, { ref = "test-int" }]
